fix css spacing for good

--- a/css/default.css
+++ b/css/default.css
@@ -32,9 +32,14 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
   display: block;
+}
+
+article {
+  display: block;
+  margin-left: 3rem;
 }
 ul {
   list-style-type: none;
@@ -134,7 +139,6 @@ main {
 .main-container {
   margin-top: 2rem;
   margin-bottom: 2rem;
-  margin-left: 0em;
 }
 
 nav {
@@ -179,8 +183,20 @@ footer {
 }
 
 .teaser {
+  margin-top: -0.5rem;
   margin-bottom: 2rem;
   padding-bottom: 2rem;
+  border-bottom: none;
+  margin-left: -3rem;
+}
+
+.teaser::after {
+  content: "";
+  padding-bottom: 2rem;
+  position: absolute;
+  left: 18.75rem;          /* start the border 3rem from the left */
+  right: 0;            /* keep full width minus left offset */
+  height: 1px;         /* border thickness */
   border-bottom: 1px solid #888;
 }
 
@@ -470,7 +486,6 @@ ol, ul {
   .main-container {
     margin-top: 0;
     padding-left: 0rem;
-    margin-left: -0.125em;
   }
 
   .image-large {
